@@ -1,6 +1,8 @@
 #!@EXENAME@
 # -*- python -*-
 
+# Keep this script in sync with python-config.sh.in
+
 import getopt
 import os
 import sys
